--- a/css/styles.css
+++ b/css/styles.css
@@ -176,6 +176,17 @@ ul {
   background-color: #404bbf;
 }
 
+.features-icon-container {
+  height: 112px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 8px;
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  background-color: #f4f4fd;
+}
+
 .features {
   padding-top: 120px;
   padding-bottom: 120px;
@@ -217,14 +228,14 @@ ul {
   gap: 24px;
 }
 
+.features-item {
+  flex-basis: calc((100% - 72px) / 4);
+}
+
 .team {
   background-color: #f4f4fd;
   padding-top: 120px;
   padding-bottom: 120px;
-}
-
-.features-item {
-  flex-basis: calc((100% - 72px) / 4);
 }
 
 .team-container-card {
@@ -251,6 +262,8 @@ ul {
   background-color: #fff;
   border-radius: 0 0 4px 4px;
   width: calc((100% - 72px) / 4);
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .team-name {
@@ -270,6 +283,37 @@ ul {
   letter-spacing: 0.02em;
   text-align: center;
   color: #434455;
+}
+
+.social-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-top: 8px;
+}
+
+.social-item {
+  width: 40px;
+  height: 40px;
+}
+
+.social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-icon {
+  fill: #f4f4fd;
+}
+
+.social-link :hover .social-link :focus {
+  background-color: #404bbf;
 }
 
 .portfolio {
