fix class social-link

--- a/css/styles.css
+++ b/css/styles.css
@@ -312,7 +312,8 @@ ul {
   fill: #f4f4fd;
 }
 
-.social-link:hover .social-link:focus {
+.social-link:hover,
+.social-link:focus {
   background-color: #404bbf;
 }
 
