--- a/css/styles.css
+++ b/css/styles.css
@@ -285,19 +285,19 @@ ul {
   color: #434455;
 }
 
-.social-list {
+.team-social-list {
   display: flex;
   justify-content: center;
   gap: 24px;
   margin-top: 8px;
 }
 
-.social-item {
+.team-social-item {
   width: 40px;
   height: 40px;
 }
 
-.social-link {
+.team-link-icon {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -308,12 +308,12 @@ ul {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-icon {
+.team-social-icon {
   fill: #f4f4fd;
 }
 
-.social-link:hover,
-.social-link:focus {
+.team-social-icon:hover,
+.team-social-icon:focus {
   background-color: #404bbf;
 }
 
@@ -421,14 +421,14 @@ ul {
 
 .footer-container {
   display: flex;
-  align-items: center;
+  align-items: baseline;
 }
 
 .footer-wrap {
   margin-right: 120px;
 }
 
-.social-title {
+.footer-social-title {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -437,17 +437,17 @@ ul {
   margin-bottom: 16px;
 }
 
-.social-list {
+.footer-social-list {
   display: flex;
   gap: 16px;
 }
 
-.social-item {
+.footer-social-item {
   width: 40px;
   height: 40px;
 }
 
-.social-link {
+.footer-social-link {
   width: 100%;
   height: 100%;
   background-color: #4d5ae5;
@@ -458,9 +458,13 @@ ul {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-link:hover,
-.social-link:focus {
+.footer-social-link:hover,
+.footer-social-link:focus {
   background-color: #31d0aa;
+}
+
+.footer-social-icon {
+  fill: #f4f4fd;
 }
 
 .team-photo {
